# opssat-cloud-detection

./: .gitignore  .gitmodules  .~lock.foo.csv#  CMakeLists.txt  LICENSE  Makefile  README.md  foo.csv  random_forest.sh  ranger_out.csv
bin-arm/FP16-download/: CMakeLists.txt
bin-arm/FP16-download/fp16-prefix/src/fp16-stamp/: fp16-urlinfo.txt
bin-arm/FXdiv-download/: CMakeLists.txt
bin-arm/FXdiv-download/fxdiv-prefix/src/fxdiv-stamp/: fxdiv-urlinfo.txt
bin-arm/flatbuffers-flatc/src/flatbuffers-flatc-stamp/: flatbuffers-flatc-source_dirinfo.txt
bin-arm/include/ranger/cpp_version/: ranger
bin-arm/psimd-download/: CMakeLists.txt
bin-arm/psimd-download/psimd-prefix/src/psimd-stamp/: psimd-gitinfo.txt
bin-arm/pthreadpool-download/: CMakeLists.txt
bin-arm/pthreadpool-download/pthreadpool-prefix/src/pthreadpool-stamp/: pthreadpool-urlinfo.txt
bin-arm/src/abseil-cpp-populate-stamp/: abseil-cpp-populate-gitclone-lastrun.txt
bin-arm/src/eigen-populate-stamp/: eigen-populate-gitclone-lastrun.txt
bin-arm/src/xnnpack-populate-stamp/: xnnpack-populate-gitinfo.txt
bin-sepp/FP16-download/: CMakeLists.txt
bin-sepp/FP16-download/fp16-prefix/src/fp16-stamp/: fp16-urlinfo.txt
bin-sepp/FXdiv-download/: CMakeLists.txt
bin-sepp/FXdiv-download/fxdiv-prefix/src/fxdiv-stamp/: fxdiv-urlinfo.txt
bin-sepp/flatbuffers-flatc/src/flatbuffers-flatc-stamp/: flatbuffers-flatc-source_dirinfo.txt
bin-sepp/psimd-download/: CMakeLists.txt
bin-sepp/psimd-download/psimd-prefix/src/psimd-stamp/: psimd-gitclone-lastrun.txt
bin-sepp/pthreadpool-download/: CMakeLists.txt
bin-sepp/pthreadpool-download/pthreadpool-prefix/src/pthreadpool-stamp/: pthreadpool-urlinfo.txt
bin-sepp/src/abseil-cpp-populate-stamp/: abseil-cpp-populate-gitinfo.txt
bin-sepp/src/eigen-populate-stamp/: eigen-populate-gitinfo.txt
bin-sepp/src/xnnpack-populate-stamp/: xnnpack-populate-gitinfo.txt
em_test/: ranger_out.confusion  ranger_out.csv  ranger_out.forest
include/: constants.h
python/: lut_gen.py  tensorflow_dataloader.py  tf_train.ipynb
release/home/exp185/: config.dev.ini  provider.properties  start_exp185.sh  stop_exp185.sh
sandbox/io/: .gitignore  Makefile  README.md
sandbox/io/src/: main.c
src/: helper.h  main.cpp  main_rf.cpp
